Adjust maximum content width to avoid line wrapping

--- a/src/style.css
+++ b/src/style.css
@@ -48,7 +48,7 @@ body {
 #header-content {
   padding: 10px;
   margin: auto;
-  max-width: 1000px;
+  max-width: 1100px;
 }
 
 #header-content {
